# dbsync

./: .gitignore  README.md  cabal.project  dbsync.aux
dbsync/: dbsync.cabal
dbsync-db/: dbsync-db.cabal
dbsync-db/src/DbSync/Db/: Phase.hs  Sql.hs  Types.hs
dbsync-db/src/DbSync/Db/Loader/: Encoder.hs
dbsync-db/src/DbSync/Db/Schema/: AdaPots.hs  Address.hs  CBOR.hs  Core.hs  Entity.hs  EpochParamPending.hs  EpochSyncStats.hs  Generate.hs  Governance.hs  Ids.hs  Init.hs  Metadata.hs  Migration.hs  MultiAsset.hs  Pool.hs  ScriptsDatums.hs  StakeDelegation.hs  SyncState.hs  Types.hs  UTxO.hs  Version.hs
dbsync-db/src/DbSync/Db/Sql/: Refs.hs
dbsync-db/src/DbSync/Db/Statement/: Address.hs  Backfill.hs  Block.hs  CollateralTxIn.hs  CollateralTxOut.hs  Common.hs  ConsumedBy.hs  Delegation.hs  EpochParamPending.hs  IdAllocator.hs  Indexes.hs  Loader.hs  MaTxMint.hs  MaTxOut.hs  MultiAsset.hs  PoolHash.hs  PoolMetadataRef.hs  PoolOwner.hs  PoolRelay.hs  PoolRetire.hs  PoolUpdate.hs  ReferenceTxIn.hs  Resolve.hs  Resume.hs  Rollback.hs  Sequences.hs  SlotLeader.hs  StakeAddress.hs  StakeDeregistration.hs  StakeRegistration.hs  SyncState.hs  Transaction.hs  (+7 more)
dbsync-db/src/DbSync/Util/: Bech32.hs  DedupHash.hs
dbsync-mock/: dbsync-mock.cabal
dbsync-mock/src/Cardano/Mock/: Chain.hs  ChainDB.hs
dbsync-smash/: dbsync-smash.cabal
dbsync-smash/src/DbSync/SMASH/: Server.hs
dbsync/app/: Main.hs
dbsync/src/DbSync/: App.hs  AppM.hs  Cli.hs  Config.hs  Env.hs  Error.hs  Extractor.hs  Metrics.hs  Phase.hs  Projection.hs  Resolver.hs  StateQuery.hs  Trace.hs  Util.hs  Watchdog.hs  Writer.hs
dbsync/src/DbSync/Address/: Buffer.hs  Worker.hs
dbsync/src/DbSync/App/: Args.hs  Boot.hs  Run.hs
dbsync/src/DbSync/Block/: Metadata.hs  Parser.hs  Pipeline.hs  Receiver.hs  Types.hs
dbsync/src/DbSync/Checkpoint/: Manager.hs  Resume.hs  Serialise.hs  SyncState.hs  Types.hs
dbsync/src/DbSync/Config/: Genesis.hs  Node.hs  Types.hs  Validation.hs
dbsync/src/DbSync/Copy/: Connection.hs  Writer.hs
dbsync/src/DbSync/Db/: Loader.hs  Pool.hs  Transaction.hs
dbsync/src/DbSync/Era/: Shelley.hs
dbsync/src/DbSync/Extractor/: Cbor.hs  Core.hs  CurrentState.hs  EpochBoundary.hs  EpochSyncStats.hs  Governance.hs  Metadata.hs  MultiAsset.hs  Pool.hs  ScriptsDatums.hs  SharedDedup.hs  StakeDelegation.hs  UTxO.hs
dbsync/src/DbSync/Id/: Counter.hs  DedupMap.hs
dbsync/src/DbSync/Ingest/: Consumer.hs  Pipeline.hs  ReceiverStats.hs
dbsync/src/DbSync/Ledger/: DepositAccumulator.hs  EpochUpdate.hs  Event.hs  Fingerprint.hs  Keys.hs  ProtoParams.hs  Rewards.hs  Snapshot.hs  StakeDist.hs  State.hs  SyncState.hs  Types.hs  Worker.hs
dbsync/src/DbSync/Node/: ChainSyncMsg.hs  Connection.hs
dbsync/src/DbSync/OffChain/: Fetcher.hs  Pool.hs  Types.hs  Vote.hs
dbsync/src/DbSync/Phase/: Boot.hs  Current.hs  Following.hs  FollowingChainTip.hs  IngestChainHistory.hs  PreparingForChainTip.hs  PreparingForVolatileTail.hs  Ref.hs  Type.hs
dbsync/src/DbSync/Projection/: Cbor.hs  Core.hs  CurrentState.hs  EpochBoundary.hs  Governance.hs  Metadata.hs  MultiAsset.hs  ScriptsDatums.hs  StakeDelegation.hs  UTxO.hs
dbsync/src/DbSync/Resolver/: AddressBuffer.hs  AddressWorker.hs  Follow.hs  Ingest.hs
dbsync/src/DbSync/StateQuery/: ObservedSummary.hs  Types.hs
dbsync/src/DbSync/Trace/: Backend.hs  Pulse.hs  Replay.hs  Timing.hs  Types.hs  Watchdog.hs
dbsync/src/DbSync/Worker/: TxOut.hs
dbsync/src/DbSync/Writer/: CopyAdapter.hs  InsertAdapter.hs  Testing.hs
dbsync/test-fixtures/: full-config.json  ingest-mode.json  invalid-epoch-no-ledger.json  invalid-multi-asset-no-utxo.json  json-logging.json  ledger-backend-inmemory.json  ledger-backend-lsm.json  minimal-config.json  no-database.json  node-config-testnet.json  node-config.json  override-options.json  override-projections.json  valid-ledger-disabled.json
dbsync/test-main/: Main.hs
dbsync/test-main/DbSync/: AppSpec.hs  CliSpec.hs  PropertySpec.hs
dbsync/test-main/DbSync/Checkpoint/: ManagerSpec.hs  ResumeSpec.hs  SyncStateSpec.hs
dbsync/test-main/DbSync/Config/: GenesisSpec.hs  NodeSpec.hs  TypesSpec.hs  ValidationSpec.hs
dbsync/test-main/DbSync/Copy/: WriterSpec.hs
dbsync/test-main/DbSync/Db/: TypesSpec.hs
dbsync/test-main/DbSync/Extractor/: CoreSpec.hs  EpochBoundarySpec.hs  PoolSpec.hs  StakeDelegationSpec.hs  UTxOSpec.hs
dbsync/test-main/DbSync/Ingest/: ConsumerSpec.hs  PipelineSpec.hs
dbsync/test-main/DbSync/Ledger/: StateSpec.hs  SyncStateSpec.hs  TypesSpec.hs  WorkerSpec.hs
dbsync/test-main/DbSync/Phase/: BootSpec.hs  FollowingChainTipSpec.hs  MockChainSpec.hs  PreparingForChainTipSpec.hs
dbsync/test-main/DbSync/Schema/: AdaPotsSpec.hs  AddressSpec.hs  GenerateSpec.hs  GovernanceSpec.hs  InitSpec.hs  RewardSpec.hs  SyncStateSpec.hs
dbsync/test-main/DbSync/StateQuery/: ObservedSummarySpec.hs
dbsync/test-main/DbSync/Util/: DedupHashSpec.hs
dbsync/test/DbSync/Test/: Database.hs  Fixtures.hs  Generators.hs  Helpers.hs  MockChain.hs  PipelineEnv.hs
tests/: dbsync-tests.cabal
tests/fixtures/: db-sync-config.json  full-config.json  invalid-epoch-no-ledger.json  invalid-multi-asset-no-utxo.json  node-config-real-mainnet.json  utxo-strategy-from-ledger.json  utxo-strategy-prune.json  utxo-tx-in-disabled.json
tests/lib/DbSync/Test/: AppHarness.hs  Database.hs  E2E.hs  Fixtures.hs  Generators.hs  Hasql.hs  Helpers.hs  Lsm.hs  MockChain.hs  MockNode.hs  PgAssertions.hs  PipelineEnv.hs  Writer.hs
tests/main/: Main.hs
tests/main/DbSync/Checkpoint/: ResumeSpec.hs
tests/main/DbSync/Config/: NodeSpec.hs  ValidationSpec.hs
tests/main/DbSync/Extractor/: CoreSpec.hs  UTxOSpec.hs
tests/main/DbSync/Ingest/: ConsumerSpec.hs
tests/main/DbSync/Ledger/: DepositAccumulatorSpec.hs  WorkerSpec.hs
tests/main/DbSync/Phase/: BootSpec.hs  FollowingChainTipSpec.hs  IngestPrepFollowSpec.hs  MockChainSpec.hs  PreparingForChainTipSpec.hs
tests/main/DbSync/Schema/: CoreSpec.hs  InitSpec.hs  ScriptsDatumsSpec.hs
tests/main/DbSync/StateQuery/: ObservedSummarySpec.hs
tests/main/unit/DbSync/: AppSpec.hs  CliSpec.hs  PropertySpec.hs
(+151 files in other folders)
