cabal-version: 3.6
name:          dbsync-db
version:       0.1.0.0
synopsis:      PostgreSQL schema, COPY encoding, and DB interface for dbsync
description:   Shared database layer used by both dbsync (write) and
               dbsync-smash (read). Owns schema types, CREATE TABLE DDL
               generation, COPY text encoding, and the connection/writer interface.
license:       Apache-2.0
author:        IOHK Engineering Team
maintainer:    operations@iohk.io
category:      Cryptocurrency
build-type:    Simple

common warnings
  ghc-options:
    -Wall
    -Wcompat
    -Wredundant-constraints
    -Wincomplete-record-updates
    -Wincomplete-uni-patterns
    -Wmissing-deriving-strategies
    -Wpartial-fields
    -Widentities
    -Wunused-packages
    -Werror

common defaults
  default-language:   GHC2021
  default-extensions:
    NoImplicitPrelude
    OverloadedStrings
    DerivingStrategies
    GeneralizedNewtypeDeriving
    LambdaCase

library
  import:         warnings, defaults
  hs-source-dirs: src
  exposed-modules:
    DbSync.Db.Types
    DbSync.Db.Schema.Entity
    DbSync.Db.Schema.Ids
    DbSync.Db.Schema.Types
    DbSync.Db.Schema.Core
    DbSync.Db.Schema.Address
    DbSync.Db.Schema.UTxO
    DbSync.Db.Schema.Metadata
    DbSync.Db.Schema.MultiAsset
    DbSync.Db.Schema.StakeDelegation
    DbSync.Db.Schema.Pool
    DbSync.Db.Schema.CBOR
    DbSync.Db.Schema.ScriptsDatums
    DbSync.Db.Schema.EpochSyncStats
    DbSync.Db.Schema.AdaPots
    DbSync.Db.Schema.SyncState
    DbSync.Db.Schema.Generate
    DbSync.Db.Schema.Init
    DbSync.Db.Schema.Version
    DbSync.Db.Schema.Migration
    DbSync.Db.Sql
    DbSync.Db.Statement.Address
    DbSync.Db.Statement.Block
    DbSync.Db.Statement.CollateralTxIn
    DbSync.Db.Statement.Delegation
    DbSync.Db.Statement.MaTxMint
    DbSync.Db.Statement.MaTxOut
    DbSync.Db.Statement.MultiAsset
    DbSync.Db.Statement.PoolHash
    DbSync.Db.Statement.PoolMetadataRef
    DbSync.Db.Statement.PoolOwner
    DbSync.Db.Statement.PoolRelay
    DbSync.Db.Statement.PoolRetire
    DbSync.Db.Statement.PoolUpdate
    DbSync.Db.Statement.ReferenceTxIn
    DbSync.Db.Statement.Resume
    DbSync.Db.Statement.SlotLeader
    DbSync.Db.Statement.StakeAddress
    DbSync.Db.Statement.StakeDeregistration
    DbSync.Db.Statement.StakeRegistration
    DbSync.Db.Statement.SyncState
    DbSync.Db.Statement.Tx
    DbSync.Db.Statement.TxCbor
    DbSync.Db.Statement.TxIn
    DbSync.Db.Statement.TxMetadata
    DbSync.Db.Statement.TxOut
    DbSync.Db.Statement.Withdrawal
    DbSync.Db.Writer.Copy.Encoder
    DbSync.Db.Writer.Insert
  build-depends:
      base                  >= 4.14 && < 5
    , cardano-prelude

    -- Data
    , bytestring
    , scientific
    , text
    , time
    , wide-word

    -- Database (control-plane queries via hasql; the COPY-streaming
    -- path lives in `dbsync` and uses postgresql-libpq directly).
    , hasql                 >= 1.9 && < 2

    -- System
    , process
