cabal-version: 3.6
name:          dbsync
version:       0.1.0.0
synopsis:      Cardano blockchain to PostgreSQL — reimplemented
description:   A greenfield reimplementation of dbsync using COPY-based
               parallel extraction, monotonic ID pre-assignment, and a projection
               system for modular data extraction.
license:       Apache-2.0
author:        IOHK Engineering Team
maintainer:    operations@iohk.io
copyright:     2020-2025 Input Output Global Inc (IOG).
category:      Cryptocurrency
build-type:    Simple

common warnings
  ghc-options:
    -Wall
    -Wcompat
    -Wredundant-constraints
    -Wincomplete-record-updates
    -Wincomplete-uni-patterns
    -Wmissing-deriving-strategies
    -Wpartial-fields
    -Widentities
    -Wunused-packages
    -Werror

common defaults
  default-language:   GHC2021
  default-extensions:
    NoImplicitPrelude
    OverloadedStrings
    DerivingStrategies
    GeneralizedNewtypeDeriving
    LambdaCase

-- ---------------------------------------------------------------------------
-- Library: sync engine logic
-- ---------------------------------------------------------------------------
library
  import:         warnings, defaults
  hs-source-dirs: src
  exposed-modules:
    -- Modules
    DbSync.App
    DbSync.AppM
    DbSync.Cli
    DbSync.Config
    DbSync.Config.Genesis
    DbSync.Config.Node
    DbSync.Config.Types
    DbSync.Config.Validation
    DbSync.Env
    DbSync.Error
    DbSync.Trace
    DbSync.Trace.Types
    DbSync.Trace.Backend
    DbSync.Phase
    DbSync.Phase.Boot
    DbSync.Phase.IngestChainHistory
    DbSync.Phase.PreparingForChainTip
    DbSync.Phase.FollowingChainTip
    DbSync.Block.Receiver
    DbSync.Block.Parser
    DbSync.Block.Parser.Block
    DbSync.Block.Parser.Byron
    DbSync.Block.Parser.Tx
    DbSync.Block.Parser.Types
    DbSync.Block.Types
    DbSync.Extractor
    DbSync.Extractor.Core
    DbSync.Extractor.UTxO
    DbSync.Extractor.MultiAsset
    DbSync.Extractor.Metadata
    DbSync.Extractor.StakeDelegation
    DbSync.Extractor.Pool
    DbSync.Extractor.ScriptsDatums
    DbSync.Extractor.Governance
    DbSync.Extractor.SharedDedup
    DbSync.Extractor.Cbor
    DbSync.Extractor.EpochSyncStats
    DbSync.Extractor.EpochBoundary
    DbSync.Extractor.CurrentState
    DbSync.Copy.Connection
    DbSync.Copy.Writer
    DbSync.Ingest.Consumer
    DbSync.Ingest.Pipeline
    DbSync.Ingest.ReceiverStats
    DbSync.Resolver
    DbSync.Resolver.Follow
    DbSync.Resolver.Ingest
    DbSync.StateQuery
    DbSync.StateQuery.ObservedSummary
    DbSync.StateQuery.Types
    DbSync.Writer
    DbSync.Writer.CopyAdapter
    DbSync.Writer.InsertAdapter
    DbSync.Writer.Testing
    DbSync.Id.Counter
    DbSync.Id.DedupMap
    DbSync.Checkpoint.Manager
    DbSync.Checkpoint.Resume
    DbSync.Checkpoint.SyncState
    DbSync.Checkpoint.Types
    DbSync.Checkpoint.Serialise
    DbSync.Era.Shelley.Generic
    DbSync.Era.Shelley.Generic.EpochUpdate
    DbSync.Era.Shelley.Generic.ProtoParams
    DbSync.Era.Shelley.Generic.Rewards
    DbSync.Era.Shelley.Generic.StakeDist
    DbSync.Ledger.Event
    DbSync.Ledger.Keys
    DbSync.Ledger.Snapshot
    DbSync.Ledger.State
    DbSync.Ledger.Types
    DbSync.Ledger.Worker
    DbSync.Node.Connection
    DbSync.Util
    DbSync.OffChain.Types
    DbSync.OffChain.Fetcher
    DbSync.OffChain.Pool
    DbSync.OffChain.Vote
    DbSync.Metrics
  build-depends:
    -- Base
      base                            >= 4.14 && < 5
    , cardano-prelude

    -- Internal
    , dbsync-db

    -- Cardano ecosystem (from CHaP)
    -- Pins removed: we rely on index-state + CHaP to resolve to the
    -- cardano-node 10.7.1 / LedgerDB V2 ecosystem (see cabal.project).
    , cardano-binary
    , cardano-crypto
    , cardano-crypto-wrapper
    , cardano-crypto-class
    , cardano-diffusion
    , cardano-diffusion:api
    , cardano-diffusion:subscription
    , cardano-ledger-api
    , cardano-ledger-binary
    , cardano-ledger-core
    , cardano-ledger-byron
    , cardano-ledger-shelley
    , cardano-ledger-allegra
    , cardano-ledger-mary
    , cardano-ledger-alonzo
    , cardano-ledger-babbage
    , cardano-ledger-conway          >= 1.17.3
    , cardano-ledger-dijkstra
    , cardano-node
    , cardano-protocol-tpraos
    , cardano-slotting
    , cardano-strict-containers
    , fs-api
    , io-classes:strict-stm
    , lsm-tree
    , ouroboros-consensus
    , ouroboros-consensus:cardano
    , ouroboros-consensus:diffusion
    , ouroboros-consensus:lsm
    , ouroboros-consensus:protocol
    , network-mux
    , ouroboros-network:api
    , ouroboros-network:framework
    , ouroboros-network:protocols
    , random
    , resource-registry
    , small-steps
    , sop-core
    , sop-extras
    , strict-sop-core
    , typed-protocols

    -- Database
    , postgresql-libpq
    , hasql                           >= 1.9 && < 2

    -- Data / serialisation
    , aeson
    , yaml
    , hashtables
    , bytestring
    , text
    , vector
    , vector-map
    , containers

    -- Concurrency
    , stm
    , async
    , strict
    , unliftio-core

    -- Tracing
    , contra-tracer

    -- CLI
    , optparse-applicative

    -- Other
    , base16-bytestring
    , directory
    , microlens
    , time
    , transformers-except
    , filepath

-- ---------------------------------------------------------------------------
-- Test helper library
-- ---------------------------------------------------------------------------
library dbsync-testlib
  import:         warnings, defaults
  hs-source-dirs: test
  exposed-modules:
    DbSync.Test.Database
    DbSync.Test.Fixtures
    DbSync.Test.Generators
    DbSync.Test.Hasql
    DbSync.Test.Helpers
    DbSync.Test.MockChain
    DbSync.Test.Property.Invariants
  build-depends:
      base
    , cardano-crypto-class
    , cardano-ledger-core
    , cardano-node
    , cardano-prelude
    , cardano-slotting
    , dbsync
    , dbsync-db
    , dbsync-mock
    , filepath
    , hasql                           >= 1.9 && < 2
    , ouroboros-consensus
    , ouroboros-consensus:cardano
    , ouroboros-network:api
    , process
    , text
    , time

-- ---------------------------------------------------------------------------
-- Test runner
-- ---------------------------------------------------------------------------
test-suite dbsync-test
  import:         warnings, defaults
  type:           exitcode-stdio-1.0
  hs-source-dirs: test-main
  main-is:        Main.hs
  other-modules:
    DbSync.AppSpec
    DbSync.CliSpec
    DbSync.Config.TypesSpec
    DbSync.Config.ValidationSpec
    DbSync.Config.NodeSpec
    DbSync.Config.GenesisSpec
    DbSync.Db.Statement.BlockSpec
    DbSync.Db.Statement.SlotLeaderSpec
    DbSync.Db.Statement.SyncStateSpec
    DbSync.Db.TypesSpec
    DbSync.PropertySpec
    DbSync.Schema.AdaPotsSpec
    DbSync.Schema.AddressSpec
    DbSync.Schema.CoreSpec
    DbSync.Schema.GenerateSpec
    DbSync.Schema.GovernanceSpec
    DbSync.Schema.RewardSpec
    DbSync.Schema.ScriptsDatumsSpec
    DbSync.Schema.SyncStateSpec
    DbSync.Util.Bech32Spec
    DbSync.Extractor.CoreSpec
    DbSync.Extractor.EpochBoundarySpec
    DbSync.Extractor.UTxOSpec
    DbSync.Ingest.ConsumerSpec
    DbSync.Ingest.PipelineSpec
    DbSync.Schema.InitSpec
    DbSync.Copy.WriterSpec
    DbSync.Ledger.StateSpec
    DbSync.Ledger.TypesSpec
    DbSync.Ledger.WorkerSpec
    DbSync.Checkpoint.ManagerSpec
    DbSync.Checkpoint.ResumeSpec
    DbSync.Checkpoint.SyncStateSpec
    DbSync.Phase.BootSpec
    DbSync.Phase.FollowingChainTipSpec
    DbSync.Phase.MockChainSpec
    DbSync.StateQuery.ObservedSummarySpec
  build-depends:
      base
    , base16-bytestring
    , bech32
    , dbsync
    , dbsync-db
    , dbsync-mock
    , dbsync:dbsync-testlib
    , hspec
    , cardano-ledger-core
    , cardano-prelude
    , cardano-slotting
    , cardano-strict-containers
    , bytestring
    , containers
    , io-classes:strict-stm
    , optparse-applicative
    , ouroboros-consensus
    , ouroboros-consensus:cardano
    , ouroboros-consensus:unstable-cardano-testlib
    , process
    , QuickCheck
    , scientific
    , stm
    , strict
    , text
    , time
    , wide-word

-- ---------------------------------------------------------------------------
-- Executable
-- ---------------------------------------------------------------------------
executable dbsync
  import:         warnings, defaults
  hs-source-dirs: app
  main-is:        Main.hs
  -- RTS flags tuned for COPY-heavy encoding (many short-lived
  -- ByteStrings that should die in the nursery).
  --   -A64m  : 64 MB nursery (vs default 4 MB) — minor GC 16x less often
  --   -N6    : 6 capabilities
  --   -T     : enable GHC runtime statistics
  --   --disable-delayed-os-memory-return : return freed pages to OS immediately
  ghc-options:    -threaded -rtsopts "-with-rtsopts=-A64m -N6 -T --disable-delayed-os-memory-return"
  build-depends:
      base
    , dbsync
    , dbsync-db
    , cardano-prelude
    , cardano-slotting
    , contra-tracer
    , directory
    , filepath
    , cardano-diffusion
    , hasql
    , ouroboros-consensus
    , ouroboros-consensus:cardano
    , stm
    , text
