cabal-version: 3.6
name:          dbsync-tests
version:       0.1.0.0
synopsis:      Test suite and shared test helpers for dbsync
description:   Houses every test for the dbsync workspace. Contains the
               @dbsync-testlib@ sub-library (mock-chain harness, hasql
               helpers, hspec fixtures) and the @dbsync-test@ runner that
               drives the hspec specs against the dbsync library.
license:       Apache-2.0
author:        IOHK Engineering Team
maintainer:    operations@iohk.io
copyright:     2020-2025 Input Output Global Inc (IOG).
category:      Cryptocurrency
build-type:    Simple

common warnings
  ghc-options:
    -Wall
    -Wcompat
    -Wredundant-constraints
    -Wincomplete-record-updates
    -Wincomplete-uni-patterns
    -Wmissing-deriving-strategies
    -Wpartial-fields
    -Widentities
    -Wunused-packages
    -Werror

common defaults
  default-language:   GHC2021
  default-extensions:
    NoImplicitPrelude
    OverloadedStrings
    DerivingStrategies
    GeneralizedNewtypeDeriving
    LambdaCase

-- ---------------------------------------------------------------------------
-- Test helper library
-- ---------------------------------------------------------------------------
library dbsync-testlib
  import:         warnings, defaults
  hs-source-dirs: lib
  exposed-modules:
    DbSync.Test.AppHarness
    DbSync.Test.Database
    DbSync.Test.E2E
    DbSync.Test.Fixtures
    DbSync.Test.Generators
    DbSync.Test.Hasql
    DbSync.Test.Helpers
    DbSync.Test.Lsm
    DbSync.Test.MockChain
    DbSync.Test.MockNode
    DbSync.Test.MockNode.Workload
    DbSync.Test.PgAssertions
    DbSync.Test.PipelineEnv
    DbSync.Test.Property.Invariants
    DbSync.Test.Writer
  build-depends:
      base
    , bytestring
    , cardano-crypto-class
    , cardano-ledger-core
    , cardano-ledger-mary
    , cardano-node
    , cardano-prelude
    , cardano-slotting
    , dbsync
    , dbsync-db
    , dbsync-mock
    , directory
    , filepath
    , hasql
    , ouroboros-consensus
    , ouroboros-consensus:cardano
    , ouroboros-network:api
    , process
    , text
    , time

-- ---------------------------------------------------------------------------
-- Test runner
-- ---------------------------------------------------------------------------
--
-- Specs live under one of three subdirectories to make the cost
-- profile obvious at a glance:
--
--   * @main/unit@        — pure tests, no PG, no mock chain. Fast.
--   * @main/integration@ — touches PG but no chain (schema DDL,
--                          hasql round-trips, checkpoint logic).
--   * @main/e2e@         — full app flow through the mock chainsync
--                          server (slowest; one cabal-test pass each).
--
-- The runner ('main/Main.hs') groups them under matching @describe@
-- headings so @cabal test --test-options="--match \"Unit tests\""@
-- (or similar) selects a single tier.
test-suite dbsync-test
  import:         warnings, defaults
  type:           exitcode-stdio-1.0
  hs-source-dirs: main, main/unit, main/integration, main/e2e
  main-is:        Main.hs
  ghc-options:    -threaded
  other-modules:
    DbSync.AppSpec
    DbSync.CliSpec
    DbSync.Config.TypesSpec
    DbSync.Config.ValidationSpec
    DbSync.Config.NodeSpec
    DbSync.Config.GenesisSpec
    DbSync.Db.Statement.BackfillSpec
    DbSync.Db.Statement.BlockSpec
    DbSync.Db.Statement.IndexesSpec
    DbSync.Db.Statement.RoundTripSpec
    DbSync.Db.Statement.SequencesSpec
    DbSync.Db.Statement.SlotLeaderSpec
    DbSync.Db.Statement.SyncStateSpec
    DbSync.Db.TypesSpec
    DbSync.PropertySpec
    DbSync.Worker.TxOutSpec
    DbSync.Schema.AdaPotsSpec
    DbSync.Schema.AddressSpec
    DbSync.Schema.CoreSpec
    DbSync.Schema.GenerateSpec
    DbSync.Schema.GovernanceSpec
    DbSync.Schema.RewardSpec
    DbSync.Schema.ScriptsDatumsSpec
    DbSync.Schema.SyncStateSpec
    DbSync.Util.Bech32Spec
    DbSync.Util.DedupHashSpec
    DbSync.Block.MetadataSpec
    DbSync.Extractor.CoreSpec
    DbSync.Extractor.EpochBoundarySpec
    DbSync.Extractor.PoolSpec
    DbSync.Extractor.StakeDelegationSpec
    DbSync.Extractor.UTxOSpec
    DbSync.Block.PipelineSpec
    DbSync.Phase.Ingest.ConsumerSpec
    DbSync.Phase.Ingest.DedupStoreSpec
    DbSync.Phase.Ingest.UtxoStoreSpec
    DbSync.Schema.InitSpec
    DbSync.Db.LoaderSpec
    DbSync.Ledger.DepositAccumulatorSpec
    DbSync.Ledger.FingerprintSpec
    DbSync.Ledger.StateSpec
    DbSync.Ledger.TypesSpec
    DbSync.Ledger.WorkerSpec
    DbSync.Checkpoint.ManagerSpec
    DbSync.Checkpoint.ResumeSpec
    DbSync.Checkpoint.SyncStateSpec
    DbSync.App.BootSpec
    DbSync.Phase.CurrentSpec
    DbSync.Phase.Following.BufferedDiffSpec
    DbSync.Phase.Following.RollbackSpec
    DbSync.Phase.Following.RunSpec
    DbSync.Phase.FollowAtTipSpec
    DbSync.Phase.FollowPerfRealisticSpec
    DbSync.Phase.FollowPerfSpec
    DbSync.Phase.FollowRestartSpec
    DbSync.Phase.FollowReplayOnBootSpec
    DbSync.Phase.IngestPrepFollowSpec
    DbSync.Phase.IngestRestartSpec
    DbSync.Phase.LsmLifecycleSpec
    DbSync.Phase.MockChainSpec
    DbSync.Phase.MockNodeSpec
    DbSync.Phase.Preparing.RunSpec
    DbSync.StateQuery.ObservedSummarySpec
    DbSync.StateQuery.SlotDetailsSpec
    DbSync.Trace.ReplaySpec
  build-depends:
      base
    , aeson
    , base16-bytestring
    , bech32
    , contra-tracer
    , dbsync
    , dbsync-db
    , dbsync-mock
    , dbsync-tests:dbsync-testlib
    , Diff
    , hasql
    , hspec
    , cardano-crypto-class
    , cardano-ledger-binary
    , cardano-ledger-core
    , cardano-prelude
    , cardano-slotting
    , cardano-strict-containers
    , bytestring
    , containers
    , directory
    , filepath
    , io-classes:strict-stm
    , lsm-tree
    , optparse-applicative
    , ouroboros-consensus
    , ouroboros-consensus:cardano
    , ouroboros-consensus:unstable-cardano-testlib
    , ouroboros-network:api
    , ouroboros-network:protocols
    , process
    , QuickCheck
    , scientific
    , sop-extras
    , stm
    , strict
    , text
    , time
    , wide-word
